cmd/aurelius/assets/static/css/main.css
.main__controls {
	position: fixed;
	bottom: 0;
	left: 50%;
	transform: translateX(-50%);
	width: 100%;
	max-width: 1200px;
	box-shadow: 0px 0px 1rem rgba(0, 0, 0, 0.75);
}

.main__dir {
	max-width: 960px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 8rem;
}

#unfavorite-button {
	color: hsl(0, 70%, 72.9%);
}

#about-dialog:before {
	content: "";
	background:
		center center / contain url("/static/img/aurelius.svgz") no-repeat,
		linear-gradient(hsl(240, 2%, 22%) 50%, hsl(240, 2%, 15%));
	border-radius: 0.5rem;
	box-shadow: inset 0 0 1rem 0rem rgba(0, 0, 0, 0.5);
	display: block;
	min-width: 10rem;
	max-width: 16rem;
	height: 12rem;
	margin: 1rem auto;
}

body {
	background: hsl(39, 0%, 11.8%);
}

@media (min-width: 960px) {
	body {
		background: calc(50vw - (960px + 2rem) / 2) top / calc(960px + 2rem) fixed no-repeat
				linear-gradient(hsl(39, 0%, 11.8%) 50%, hsl(39, 0%, 11.8%)),
			left top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
				linear-gradient(
					to right,
					rgba(0, 0, 0, 0.25) calc(100% - 150px),
					rgba(0, 0, 0, 0.35) 100%
				),
			right top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
				linear-gradient(
					to left,
					rgba(0, 0, 0, 0.25) calc(100% - 150px),
					rgba(0, 0, 0, 0.35) 100%
				),
			fixed url("/static/img/bg.svgz"),
			fixed linear-gradient(hsl(240, 2%, 30%) 50%, hsl(240, 2%, 20%));
	}
}

/* Prevent centered content from shifting when scrollbar appears */
@media (min-width: 1200px) {
	body {
		background: calc(50vw - (960px + 2rem) / 2) top / calc(960px + 2rem) fixed no-repeat
				linear-gradient(hsl(39, 0%, 11.8%) 50%, hsl(39, 0%, 11.8%)),
			left top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
				linear-gradient(
					to right,
					rgba(0, 0, 0, 0.25) calc(100% - 150px),
					rgba(0, 0, 0, 0.35) 100%
				),
			right top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
				linear-gradient(
					to left,
					rgba(0, 0, 0, 0.25) calc(100% - 150px),
					rgba(0, 0, 0, 0.35) 100%
				),
			fixed url("/static/img/bg.svgz"),
			fixed linear-gradient(hsl(240, 2%, 30%) 50%, hsl(240, 2%, 20%));
	}

	html {
		margin-left: calc(100vw - 100%);
		margin-right: 0;
	}

	.main__controls {
		left: calc(50% + (100vw - 100%) / 2);
	}
}

@media (min-width: 1200px) {
	.main__controls {
		bottom: inherit;
		top: 0;
	}

	.main__dir {
		margin-bottom: inherit;
		margin-top: 8rem;
	}

	.top-right__menu {
		top: inherit;
		bottom: 0;
		flex-direction: column-reverse;
	}
}

